<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register_main"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <View
        android:id="@+id/view"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true" />

    <ScrollView
        android:id="@+id/ScrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/registration_background"
        android:padding="25dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/member_login_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:text="Welcome!"
                android:textSize="25sp"
                android:textStyle="bold"
                android:typeface="monospace" />

            <EditText
                android:id="@+id/loginActivity_editText_email"
                android:layout_width="fill_parent"
                android:layout_height="36dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/rounded_corner"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:paddingLeft="10dp"
                android:textColor="#000000" />


            <EditText
                android:id="@+id/loginActivity_editText_password"
                android:layout_width="fill_parent"
                android:layout_height="36dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/rounded_corner"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:textColor="#000000" />

            <CheckBox
                android:id="@+id/showPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="Show Password" />

            <Button
                android:id="@+id/loginActivity_button_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/register_button"
                android:text="@string/login_button"
                android:textColor="#ffffff"
                android:textSize="20sp" />
            <Button
                android:id="@+id/loginActivity_button_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@null"
                android:text="@string/new_account"
                android:textAllCaps="false" />

        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/view_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/member_imview" />

</RelativeLayout>